--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
       <div class="container">
         <h4>A mesage you like to pass</h4>
-        <form action="">
-            <input type="text"  class="box">
+        <form id="form">
+            <input type="text" id="message" class="box">
             <input type="submit" class="button">
         </form>
         <h5 class="feedback">Please enter the value to pass</h5>
